--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -5,16 +5,20 @@ html
     title= title
     link(href='/css/normalize.css', rel='stylesheet')
     link(href='/css/buttons.css', rel='stylesheet')
+    link(href='/css/jquery.nouislider.css' rel='stylesheet')
     link(href='/less/app.css', rel='stylesheet')
   body
     block content
+
 
     script(src='/js/vendor/jquery-2.1.1.js')
     script(src='/js/vendor/lodash-2.4.1.js')
     script(src='/js/vendor/moment-2.6.0.js')
     script(src='/js/vendor/buttons.js')
     script(src='/js/vendor/traceur.js')
+    script(src='/js/vendor/jquery.nouislider.min.js')
     script(src='/js/es5/main.js')
     script(src='/js/es6/compiled/main.js')
+
 
     block scripts
